[package]
name = "mqtt-bench"
version = "0.1.0"
edition = "2021"
authors = ["Zhanhui Li <lizhanhui@gmail.com>"]
description = "A MQTT benchmark tool"
license = "Apache-2.0"
keywords = ["mqtt", "benchmark"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
byteorder = "1.5.0"
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
clap-help = "1.2.0"
console-subscriber = "0.2.0"
env_logger = "0.11"
log = "0.4"
openssl = "0.10"
paho-mqtt = { version = "0.12", features = ["vendored-ssl"] }
prometheus = "0.13.4"
ratelimit = "0.10.0"
tokio = { version = "1", features = ["full"] }
tokio-openssl = "0.6.5"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6.0"
